# Poppop

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ServerFunc.cpp  ServerFunc.h  StructForSocket.h  cmake_install.cmake  cmd_exe.txt  main.cpp  makefile  output  sql.sql
ClientForServer/: Connect.c  Connect.h  StructForSocket.h  applyForFriend.c  client_test.c  close.c  connect  connect.c  connect.cpp  createGroup.c  definition.c  definition.h  friendList.c  groupChat.c  login.c  recvFile.c  recvMessege.c  recvNotice.c  recvPublicMessage.c  register.c  replyFriend.c  sendFile.c  sendMessege.c  sendMessegePrivate.c  sendMessegePublic.c  sendPublicMessage.c  signIn.c  socket.h
Controller/: 2019830_history.txt  CMakeLists.txt  Makefile  ServerFunc.cpp  ServerFunc.h  client.cpp  cmake_install.cmake  server.cpp
DTO/: CMakeLists.txt  DTO.h  FriendDTO.h  GroupChatDTO.h  GroupChatSearchDTO.h  GroupDTO.h  GroupSearchDTO.h  LoginDTO.h  Makefile  MessageDTO.h  MessagePrivateDTO.h  MessagePublicDTO.h  MyTable.h  Poppop.h  SearchDTO.h  TabSample.h  UserDTO.h  UserSearchDTO.h  cmake_install.cmake
DTO/Function/: Function.c
Function/: Function.h
Service/: CMakeLists.txt  DBContextFactory.h  FriendService.cpp  FriendService.h  GroupChatService.cpp  GroupChatService.h  GroupService.cpp  GroupService.h  Makefile  MessagePrivateService.cpp  MessagePrivateService.h  MessagePublicService.cpp  MessagePublicService.h  MessageService.cpp  MessageService.h  MyTable.h  Service.h  SplitStr.h  UserService.cpp  UserService.h  cmake_install.cmake  main.cpp  md5_encode.cpp  md5_encode.h
client/: ReadMe
file/: ReadMe  服务层结构图.pptx  演示文稿1.pptx  第1组_01项目计划.xls  第1组_人员配置表.xls  第1组_会议记录.doc  第1组_模块概要设计说明书.doc  第1组_需求理解一览表.xls
poppop_client/: dialog.c  file_updata.c  login.c  main.c  main_menu.c  poppop.cbp  poppop.depend  poppop.layout  signup.c  user_image_change.c
poppop_client/UI/: dialog.glade  dialog.glade~  login.glade  login.glade~  main.glade  main.glade~  signup.glade  signup.glade~
poppop_client/user/: friend_info.txt  user_info.txt
temp/: Poppop.ddl  Poppop3.ddl  sql.sql
