cmake_minimum_required(VERSION 2.6)
PROJECT(hello)
add_subdirectory(DTO)
#add_subdirectory(Controller)
add_subdirectory(Service)
aux_source_directory(. DIR_SRCS)
add_executable(hello ${DIR_SRCS})
link_directories(/usr/lib/x86_64-linux-gnu)
#link_directories(/usr/lib/x86_64-linux-gnu/libpthread.a)
include_directories("${PROJECT_SOURCE_DIR}/DTO")
include_directories("${PROJECT_SOURCE_DIR}/Service")
#include_directories("${PROJECT_SOURCE_DIR}/Controller")
add_library(connector STATIC IMPORTED)
#add_library(pthread STATIC IMPORTED)
set_property(TARGET connector PROPERTY IMPORTED_LOCATION /usr/local/lib/libsqlpp-mysql.a)
#set_property(TARGET pthread PROPERTY IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libpthread.a)

#SET(CMAKE_CXX_COMPILER “/usr/bin/g++-7”)

#set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fPIC")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
#add_compile_options("-fPIC")
set(CMAKE_C_FLAGS "-fPIC")
set(CMAKE_CXX_FLAGS "-fPIC")
#target_link_libraries(hello Service Controller connector pthread #libmysqlclient.so )

target_link_libraries(hello connector Service libmysqlclient.so )
target_link_libraries(hello -pthread )
